Update left navigation bar

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </a>
                         <a href="#">
                             <div class="left-menu__icon-box-responsive">
-                                <li class="left-menu__menu-Flinks">
+                                <li class="left-menu__menu-links">
                                     <i
                                         class="bi bi-bookmark left-menu__icons"
                                     ></i
@@ -115,16 +115,25 @@
             </div>
             <!-- Left-menu left profile -->
             <div class="left-menu__profile">
-                <div>
+                <div class="left-menu__profile-content">
                     <div class="left-menu__profile-img">
-                        <img src="" alt="" />
+                        <img src="img/kevin-alt.jpg" alt="Profile img" />
                     </div>
-                    <div class="left-menu__profile-text"></div>
+                    <div class="left-menu__profile-text">
+                        <p>Kevin Gomez</p>
+                        <p>@KevinMGC3</p>
+                    </div>
                 </div>
-                <div class="left-menu__profile-icon"></div>
+                <div class="left-menu__profile-icon">
+                    <i class="bi bi-three-dots left-menu__icons"></i>
+                </div>
             </div>
         </section>
+        <!-- Content section -->
         <section class="content"></section>
-        <section class="right-menu"></section>
+        <!-- Right menu -->
+        <section class="right-menu">
+            
+        </section>
     </body>
 </html>
