Add searchbar to right panel

--- a/index.html
+++ b/index.html
@@ -133,7 +133,18 @@
         <section class="content"></section>
         <!-- Right menu -->
         <section class="right-menu">
-            
+            <div class="right-menu__input-group">
+                <input
+                    type="text"
+                    name="search"
+                    id="search"
+                    placeholder="Search Twitter"
+                />
+                <label for="search"><i class="bi bi-search"></i></label>
+            </div>
+            <div class="right-menu__gallery">
+                
+            </div>
         </section>
     </body>
 </html>
