--- a/index.html
+++ b/index.html
@@ -250,11 +250,64 @@
                     </div>
                     <button class="btn">Follow</button>
                 </div>
-                <a href="#" class="might-like__show-more">Show more</a>
+                <a href="#" class="show-more">Show more</a>
             </div>
-            <div class="trends">
-                
+            <!-- Right-menu trends -->
+            <div class="right-menu__trends">
+                <h2>Trends for you</h2>
+                <div class="right-menu__trends-rows">
+                    <div>
+                        <p class="right-menu__trends-text-1">
+                            Trending in paraguay
+                        </p>
+                        <p class="right-menu__trends-text-2">Ariel</p>
+                        <p class="right-menu__trends-text-1">31.7K Tweets</p>
+                    </div>
+                    <div class="right-menu__trends-icon">
+                        <i class="bi bi-three-dots left-menu__icons"></i>
+                    </div>
+                </div>
+                <div class="right-menu__trends-rows">
+                    <div>
+                        <p class="right-menu__trends-text-1">
+                            Trending in paraguay
+                        </p>
+                        <p class="right-menu__trends-text-2">Ariel</p>
+                        <p class="right-menu__trends-text-1">31.7K Tweets</p>
+                    </div>
+                    <div class="right-menu__trends-icon">
+                        <i class="bi bi-three-dots left-menu__icons"></i>
+                    </div>
+                </div>
+                <div class="right-menu__trends-rows">
+                    <div>
+                        <p class="right-menu__trends-text-1">
+                            Trending in paraguay
+                        </p>
+                        <p class="right-menu__trends-text-2">Ariel</p>
+                        <p class="right-menu__trends-text-1">31.7K Tweets</p>
+                    </div>
+                    <div class="right-menu__trends-icon">
+                        <i class="bi bi-three-dots left-menu__icons"></i>
+                    </div>
+                </div>
+                <div class="right-menu__trends-rows">
+                    <div>
+                        <p class="right-menu__trends-text-1">
+                            Trending in paraguay
+                        </p>
+                        <p class="right-menu__trends-text-2">Ariel</p>
+                        <p class="right-menu__trends-text-1">31.7K Tweets</p>
+                    </div>
+                    <div class="right-menu__trends-icon">
+                        <i class="bi bi-three-dots left-menu__icons"></i>
+                    </div>
+                </div>
+                <a href="#" class="show-more">Show more</a>
             </div>
+            <!-- Right-menu footer -->
+            <div class="right-menu__footer"></div>
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         </section>
     </body>
 </html>
