--- a/index.html
+++ b/index.html
@@ -130,7 +130,45 @@
             </div>
         </section>
         <!-- Content section -->
-        <section class="content"></section>
+        <section class="content">
+            <header class="content__header">
+                <div class="content__header-icon">
+                    <i class="bi bi-arrow-left-short"></i>
+                </div>
+                <div class="content__header-text">
+                    <h2>NASA en español<!-- svg de verificado --><svg
+                                viewBox="0 0 22 22"
+                                width="20"
+                                height="20"
+                                style="transform: translateY(3px)"
+                                aria-label="Verified account"
+                                role="img"
+                                class="r-4qtqp9 r-yyyyoo r-1xvli5t r-f9ja8p r-og9te1 r-bnwqim r-1plcrui r-lrvibr"
+                                data-testid="icon-verified"
+                            >
+                                <g>
+                                    <path
+                                        clip-rule="evenodd"
+                                        d="M12.096 1.673c-.593-.635-1.599-.635-2.192 0L8.452 3.227c-.296.316-.714.49-1.147.474L5.18 3.63c-.867-.03-1.579.682-1.55 1.55l.072 2.125c.015.433-.158.851-.474 1.147L1.673 9.904c-.635.593-.635 1.599 0 2.192l1.554 1.452c.316.296.49.714.474 1.147L3.63 16.82c-.03.867.682 1.579 1.55 1.55l2.125-.072c.433-.015.851.158 1.147.474l1.452 1.555c.593.634 1.599.634 2.192 0l1.452-1.555c.296-.316.714-.49 1.147-.474l2.126.071c.867.03 1.579-.682 1.55-1.55l-.072-2.125c-.015-.433.158-.851.474-1.147l1.555-1.452c.634-.593.634-1.599 0-2.192l-1.555-1.452c-.316-.296-.49-.714-.474-1.147l.071-2.126c.03-.867-.682-1.579-1.55-1.55l-2.125.072c-.433.015-.851-.158-1.147-.474l-1.452-1.554zM6 11.39l3.74 3.74 6.2-6.77L14.47 7l-4.8 5.23-2.26-2.26L6 11.39z"
+                                        fill="#829AAB"
+                                        fill-rule="evenodd"
+                                    ></path>
+                                </g>
+                            </svg></h2>
+                    <p>4,186 Tweets</p>
+                </div>
+            </header>
+            <!-- Content front page profile -->
+            <div class="content__front-page-img">
+                <div class="content__profile-img"></div>
+            </div>
+            <!-- Content front page buttons -->
+            <div class="content__following">
+                <a href=""></a>
+                <a href=""></a>
+                <a href="">Following</a>
+            </div>
+        </section>
         <!-- Right menu -->
         <section class="right-menu">
             <div class="right-menu__input-group">
@@ -160,7 +198,7 @@
                     <div class="might-like__rows-text">
                         <p>
                             <a href="#">CNN en Español</a>
-                            <svg
+                            <!-- svg de verificado --><svg
                                 viewBox="0 0 22 22"
                                 width="18"
                                 height="18"
@@ -192,7 +230,7 @@
                     <div class="might-like__rows-text">
                         <p>
                             <a href="#">CNN en Español</a>
-                            <svg
+                            <!-- svg de verificado --><svg
                                 viewBox="0 0 22 22"
                                 width="18"
                                 height="18"
@@ -306,8 +344,20 @@
                 <a href="#" class="show-more">Show more</a>
             </div>
             <!-- Right-menu footer -->
-            <div class="right-menu__footer"></div>
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <footer class="right-menu__footer">
+                <nav>
+                    <a href="#">Terms of Service</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Cookie Policy</a>
+                    <a href="#">Accessibility</a>
+                    <a href="#">Ads info</a>
+                    <a href="#"
+                        >More
+                        <i class="bi bi-three-dots left-menu__icons"></i>
+                    </a>
+                </nav>
+                <strong>© 2023 Twitter, Inc.</strong>
+            </footer>
         </section>
     </body>
 </html>
