Add content profile description

--- a/index.html
+++ b/index.html
@@ -136,25 +136,27 @@
                     <i class="bi bi-arrow-left-short"></i>
                 </div>
                 <div class="content__header-text">
-                    <h2>NASA en español<!-- svg de verificado --><svg
-                                viewBox="0 0 22 22"
-                                width="20"
-                                height="20"
-                                style="transform: translateY(3px)"
-                                aria-label="Verified account"
-                                role="img"
-                                class="r-4qtqp9 r-yyyyoo r-1xvli5t r-f9ja8p r-og9te1 r-bnwqim r-1plcrui r-lrvibr"
-                                data-testid="icon-verified"
-                            >
-                                <g>
-                                    <path
-                                        clip-rule="evenodd"
-                                        d="M12.096 1.673c-.593-.635-1.599-.635-2.192 0L8.452 3.227c-.296.316-.714.49-1.147.474L5.18 3.63c-.867-.03-1.579.682-1.55 1.55l.072 2.125c.015.433-.158.851-.474 1.147L1.673 9.904c-.635.593-.635 1.599 0 2.192l1.554 1.452c.316.296.49.714.474 1.147L3.63 16.82c-.03.867.682 1.579 1.55 1.55l2.125-.072c.433-.015.851.158 1.147.474l1.452 1.555c.593.634 1.599.634 2.192 0l1.452-1.555c.296-.316.714-.49 1.147-.474l2.126.071c.867.03 1.579-.682 1.55-1.55l-.072-2.125c-.015-.433.158-.851.474-1.147l1.555-1.452c.634-.593.634-1.599 0-2.192l-1.555-1.452c-.316-.296-.49-.714-.474-1.147l.071-2.126c.03-.867-.682-1.579-1.55-1.55l-2.125.072c-.433.015-.851-.158-1.147-.474l-1.452-1.554zM6 11.39l3.74 3.74 6.2-6.77L14.47 7l-4.8 5.23-2.26-2.26L6 11.39z"
-                                        fill="#829AAB"
-                                        fill-rule="evenodd"
-                                    ></path>
-                                </g>
-                            </svg></h2>
+                    <h2>
+                        NASA en español<!-- svg de verificado --><svg
+                            viewBox="0 0 22 22"
+                            width="20"
+                            height="20"
+                            style="transform: translateY(3px)"
+                            aria-label="Verified account"
+                            role="img"
+                            class="r-4qtqp9 r-yyyyoo r-1xvli5t r-f9ja8p r-og9te1 r-bnwqim r-1plcrui r-lrvibr"
+                            data-testid="icon-verified"
+                        >
+                            <g>
+                                <path
+                                    clip-rule="evenodd"
+                                    d="M12.096 1.673c-.593-.635-1.599-.635-2.192 0L8.452 3.227c-.296.316-.714.49-1.147.474L5.18 3.63c-.867-.03-1.579.682-1.55 1.55l.072 2.125c.015.433-.158.851-.474 1.147L1.673 9.904c-.635.593-.635 1.599 0 2.192l1.554 1.452c.316.296.49.714.474 1.147L3.63 16.82c-.03.867.682 1.579 1.55 1.55l2.125-.072c.433-.015.851.158 1.147.474l1.452 1.555c.593.634 1.599.634 2.192 0l1.452-1.555c.296-.316.714-.49 1.147-.474l2.126.071c.867.03 1.579-.682 1.55-1.55l-.072-2.125c-.015-.433.158-.851.474-1.147l1.555-1.452c.634-.593.634-1.599 0-2.192l-1.555-1.452c-.316-.296-.49-.714-.474-1.147l.071-2.126c.03-.867-.682-1.579-1.55-1.55l-2.125.072c-.433.015-.851-.158-1.147-.474l-1.452-1.554zM6 11.39l3.74 3.74 6.2-6.77L14.47 7l-4.8 5.23-2.26-2.26L6 11.39z"
+                                    fill="#829AAB"
+                                    fill-rule="evenodd"
+                                ></path>
+                            </g>
+                        </svg>
+                    </h2>
                     <p>4,186 Tweets</p>
                 </div>
             </header>
@@ -164,9 +166,140 @@
             </div>
             <!-- Content front page buttons -->
             <div class="content__following">
-                <a href=""></a>
-                <a href=""></a>
-                <a href="">Following</a>
+                <a href="#" class="content__following-border">
+                    <svg
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                        class="r-18jsvk2 r-4qtqp9 r-yyyyoo r-z80fyv r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-19wmn03"
+                    >
+                        <g>
+                            <path
+                                d="M3 12c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm9 2c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm7 0c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"
+                            ></path>
+                        </g>
+                    </svg>
+                </a>
+                <a href="#" class="content__following-border">
+                    <svg
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                        class="r-18jsvk2 r-4qtqp9 r-yyyyoo r-z80fyv r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-19wmn03"
+                    >
+                        <g>
+                            <path
+                                d="M22 5v2h-3v3h-2V7h-3V5h3V2h2v3h3zm-.86 13h-4.241c-.464 2.281-2.482 4-4.899 4s-4.435-1.719-4.899-4H2.87L4 9.05C4.51 5.02 7.93 2 12 2v2C8.94 4 6.36 6.27 5.98 9.3L5.13 16h13.73l-.38-3h2.02l.64 5zm-6.323 0H9.183c.412 1.164 1.51 2 2.817 2s2.405-.836 2.817-2z"
+                            ></path>
+                        </g>
+                    </svg>
+                </a>
+                <a href="#" class="content__following-button">
+                    <p>Following</p>
+                </a>
+            </div>
+            <!-- Content profile description -->
+            <div class="content__profile-description">
+                <h1>
+                    NASA en español
+                    <!-- svg de verificado -->
+                    <svg
+                        viewBox="0 0 22 22"
+                        width="20"
+                        height="20"
+                        style="transform: translateY(3px)"
+                        aria-label="Verified account"
+                        role="img"
+                        class="r-4qtqp9 r-yyyyoo r-1xvli5t r-f9ja8p r-og9te1 r-bnwqim r-1plcrui r-lrvibr"
+                        data-testid="icon-verified"
+                    >
+                        <g>
+                            <path
+                                clip-rule="evenodd"
+                                d="M12.096 1.673c-.593-.635-1.599-.635-2.192 0L8.452 3.227c-.296.316-.714.49-1.147.474L5.18 3.63c-.867-.03-1.579.682-1.55 1.55l.072 2.125c.015.433-.158.851-.474 1.147L1.673 9.904c-.635.593-.635 1.599 0 2.192l1.554 1.452c.316.296.49.714.474 1.147L3.63 16.82c-.03.867.682 1.579 1.55 1.55l2.125-.072c.433-.015.851.158 1.147.474l1.452 1.555c.593.634 1.599.634 2.192 0l1.452-1.555c.296-.316.714-.49 1.147-.474l2.126.071c.867.03 1.579-.682 1.55-1.55l-.072-2.125c-.015-.433.158-.851.474-1.147l1.555-1.452c.634-.593.634-1.599 0-2.192l-1.555-1.452c-.316-.296-.49-.714-.474-1.147l.071-2.126c.03-.867-.682-1.579-1.55-1.55l-2.125.072c-.433.015-.851-.158-1.147-.474l-1.452-1.554zM6 11.39l3.74 3.74 6.2-6.77L14.47 7l-4.8 5.23-2.26-2.26L6 11.39z"
+                                fill="#829AAB"
+                                fill-rule="evenodd"
+                            ></path>
+                        </g>
+                    </svg>
+                </h1>
+                <strong>@NASA_es</strong>
+                <p class="content__profile-description-text-1">
+                    Explora el universo y descubre tu planeta natal con
+                    nosotros, la cuenta oficial de la NASA en español.
+                </p>
+                <a href="#" class="content__profile-description-text-2">
+                    Translate bio
+                </a>
+                <div class="content__profile-description-row-1">
+                    <svg
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                        fill="#3b3f43"
+                        class="r-14j79pv r-4qtqp9 r-yyyyoo r-1xvli5t r-1d4mawv r-dnmrzs r-bnwqim r-1plcrui r-lrvibr"
+                    >
+                        <g>
+                            <path
+                                d="M18.36 5.64c-1.95-1.96-5.11-1.96-7.07 0L9.88 7.05 8.46 5.64l1.42-1.42c2.73-2.73 7.16-2.73 9.9 0 2.73 2.74 2.73 7.17 0 9.9l-1.42 1.42-1.41-1.42 1.41-1.41c1.96-1.96 1.96-5.12 0-7.07zm-2.12 3.53l-7.07 7.07-1.41-1.41 7.07-7.07 1.41 1.41zm-12.02.71l1.42-1.42 1.41 1.42-1.41 1.41c-1.96 1.96-1.96 5.12 0 7.07 1.95 1.96 5.11 1.96 7.07 0l1.41-1.41 1.42 1.41-1.42 1.42c-2.73 2.73-7.16 2.73-9.9 0-2.73-2.74-2.73-7.17 0-9.9z"
+                            ></path>
+                        </g>
+                    </svg>
+                    <span class="content__profile-description-row-text-1">
+                        <a href="#">ciencia.nasa.gov</a>
+                    </span>
+                    <svg
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                        fill="#3b3f43"
+                        class="r-14j79pv r-4qtqp9 r-yyyyoo r-1xvli5t r-1d4mawv r-dnmrzs r-bnwqim r-1plcrui r-lrvibr"
+                    >
+                        <g>
+                            <path
+                                d="M7 4V3h2v1h6V3h2v1h1.5C19.89 4 21 5.12 21 6.5v12c0 1.38-1.11 2.5-2.5 2.5h-13C4.12 21 3 19.88 3 18.5v-12C3 5.12 4.12 4 5.5 4H7zm0 2H5.5c-.27 0-.5.22-.5.5v12c0 .28.23.5.5.5h13c.28 0 .5-.22.5-.5v-12c0-.28-.22-.5-.5-.5H17v1h-2V6H9v1H7V6zm0 6h2v-2H7v2zm0 4h2v-2H7v2zm4-4h2v-2h-2v2zm0 4h2v-2h-2v2zm4-4h2v-2h-2v2z"
+                            ></path>
+                        </g>
+                    </svg>
+                    <span class="content__profile-description-row-text-2">
+                        Joined August 2011
+                    </span>
+                </div>
+                <div class="content__profile-description-row-2">
+                    <div>
+                        <a href="#">
+                            <span>1,046</span>
+                            <span>Followed</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <span>1.5M</span>
+                        <span>Followers</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="content__profile-description-row-3">
+                    <img src="img/followed.jpg" alt="Followed">
+                    <a href="#">Followed by International Space Station</a>
+                </div>
+            </div>
+            <!-- Content nav -->
+            <div class="content__nav">
+                <nav>
+                    <div class="content__nav-box content__nav-box-1">
+                        <label for="" class="content__nav--active">Tweets</label>
+                    </div>
+                    <div class="content__nav-box content__nav-box-2">
+                        <label for="">Tweets & replies</label>
+                    </div>
+                    <div class="content__nav-box content__nav-box-3">
+                        <label for="">Media</label>
+                    </div>
+                    <div class="content__nav-box content__nav-box-4">
+                        <label for="">Likes</label>
+                    </div>
+                </nav>
+            </div>
+            <!-- Content posts -->
+            <div class="content__post-container">
+                
             </div>
         </section>
         <!-- Right menu -->
