--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
         />
-        <title>Document</title>
+        <title>Twitter by Kevin Gómez</title>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
